# geosam

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  test.py
geosam/: __init__.py  context.py  crs.py  engines.py  feature_encoder.py  logging.py  models.py  runtime.py  typing.py  vectorization.py
geosam/datasets/: __init__.py  collate.py  geogrid.py  raster.py  samplers.py
geosam/query/: __init__.py  bbox.py  points.py  prompt_set.py  prompts.py
tests/: test_dataset_and_sampler.py  test_engines_and_vectorization.py  test_models.py  test_query_and_geogrid.py  test_runtime_backends.py
